# RAG-Application

./: README.md  pyproject.toml  requirements.txt
RAG_Tutorial/LangGraph/: Step 1:.ipynb  Step2:.ipynb
RAG_Tutorial/Langchain/: Step 1: Basic Langchain.ipynb  Step 2: Ollama Basic.ipynb  Step 3: Prompt Customisation.ipynb  Step 4: Conversational RAG.ipynb  Step 5: QA SQL Data.ipynb  Step 6: Query Analysis System.ipynb  Step 7: PDF QA Document loader.ipynb
rag_application/rag_notebook/: app.ipynb  basic_langchain.ipynb  ollama_v1.ipynb
