[tool.poetry]
name = "rag-application"
version = "0.1.0"
description = ""
authors = ["rahulpndtrp"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<4.0"
langchain = "^0.3.1"
langchain-community = "^0.3.1"
langchain-nvidia-ai-endpoints = "^0.3.0"
langchain-ollama = "^0.2.0"
beautifulsoup4 = "^4.12.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
