[tool.poetry]
name = "rag-application"
version = "0.1.0"
description = ""
authors = ["rahulpndtrp"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<4.0"
langchain = "^0.3.1"
langchain-community = "^0.3.1"
langchain-nvidia-ai-endpoints = "^0.3.0"
langchain-ollama = "^0.2.0"
beautifulsoup4 = "^4.12.3"
ipykernel = "^6.29.5"
langgraph = "^0.2.28"
langchain-openai = "^0.2.1"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"
langchain-chroma = "^0.1.4"
pypdf = "^5.0.1"
langsmith = "^0.1.129"
langchain-anthropic = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
